--- a/default-detekt-config.yml
+++ b/default-detekt-config.yml
@@ -455,7 +455,7 @@ style:
   NestedClassesVisibility:
     active: true
   NewLineAtEndOfFile:
-    active: true
+    active: false
   NoTabs:
     active: true
   OptionalAbstractKeyword:
