--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,13 +4,13 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion '29.0.0'
+    compileSdkVersion 30
+    buildToolsVersion '29.0.3'
 
     defaultConfig {
         applicationId "com.ableandroid.historian"
         minSdkVersion 14
-        targetSdkVersion 29
+        targetSdkVersion 30
         multiDexEnabled true
 
         versionCode 12
@@ -41,46 +41,46 @@ android {
 }
 
 repositories {
-    jcenter()
+    google()
 }
 
 dependencies {
 
-    implementation "androidx.appcompat:appcompat:$appcompat"
-    implementation "androidx.core:core-ktx:$corektx"
-    implementation "androidx.multidex:multidex:$multidex"
+    implementation "androidx.appcompat:appcompat:1.3.1"
+    implementation "androidx.core:core-ktx:1.6.0"
+    implementation "androidx.multidex:multidex:2.0.1"
 
     //Material UI
-    implementation "com.google.android.material:material:$mdc"
-    implementation "androidx.legacy:legacy-support-v4:$jetpackVersion"
-    implementation "androidx.recyclerview:recyclerview:$recycler"
-    implementation "androidx.palette:palette:$jetpackVersion"
-    implementation "androidx.vectordrawable:vectordrawable:$vectordrawable"
+    implementation "com.google.android.material:material:1.4.0"
+    implementation "androidx.legacy:legacy-support-v4:1.0.0"
+    implementation "androidx.recyclerview:recyclerview:1.2.1"
+    implementation "androidx.palette:palette-ktx:1.0.0"
+    implementation "androidx.vectordrawable:vectordrawable:1.1.0"
 
     //WorkManager
-    implementation("androidx.work:work-runtime:$workManager"){
+    implementation("androidx.work:work-runtime:2.7.0"){
         exclude group: 'com.google.guava', module: 'listenablefuture'
     }
-    implementation ("androidx.work:work-runtime-ktx:$workManager"){
+    implementation ("androidx.work:work-runtime-ktx:2.7.0"){
         exclude group: 'com.google.guava', module: 'listenablefuture'
     }
-    kapt "androidx.work:work-runtime-ktx:$workManager"
-    implementation "androidx.work:work-rxjava2:$workManager"
-    androidTestImplementation "androidx.work:work-testing:$workManager"
+    kapt "androidx.work:work-runtime-ktx:2.7.0"
+    implementation "androidx.work:work-rxjava2:2.7.0"
+    androidTestImplementation "androidx.work:work-testing:2.7.0"
 
     //ConstraintLayout
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
 
     //Lifecycle Components
-    implementation "androidx.lifecycle:lifecycle-extensions:$archComponentsVersion"
-    implementation "androidx.lifecycle:lifecycle-common-java8:$archComponentsVersion"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-common-java8:2.4.0"
 
     // Room components
-    implementation "androidx.room:room-runtime:$roomVersion"
-    implementation "androidx.room:room-guava:$roomVersion"
-    kapt "androidx.room:room-compiler:$roomVersion"
-    testImplementation "androidx.room:room-testing:$roomVersion"
-    annotationProcessor "androidx.room:room-compiler:$roomVersion"
+    implementation "androidx.room:room-runtime:2.3.0"
+    implementation "androidx.room:room-guava:2.3.0"
+    kapt "androidx.room:room-compiler:2.3.0"
+    testImplementation "androidx.room:room-testing:2.3.0"
+    annotationProcessor "androidx.room:room-compiler:2.3.0"
 
     // Coroutines
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$rootProject.coroutines"
@@ -100,11 +100,11 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.0'
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
 
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test:rules:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.2.0'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test:runner:1.4.0'
+    androidTestImplementation 'androidx.test:rules:1.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
 
     //Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
