--- a/.gitignore
+++ b/.gitignore
@@ -42,16 +42,4 @@ projectFilesBackup/.idea/workspace.xml
 
 build/intermediates/dex-cache/cache.xml
 
-.gradle/vcsWorkingDirs/gc.properties
-.gradle/buildOutputCleanup/cache.properties
-.gradle/vcs-1/gc.properties
-.gradle/4.10.1/gc.properties
-.gradle/buildOutputCleanup/cache.properties
-app/release/output.json
-.gradle/5.4-rc-1/gc.properties
-.gradle/buildOutputCleanup/cache.properties
-.gradle/buildOutputCleanup/cache.properties
-.gradle/buildOutputCleanup/cache.properties
-.cache/ktlint
-.gradle/5.4.1/gc.properties
-.gradle/buildOutputCleanup/cache.properties
+.gradle/*
